log/run.call_python..out
  File "run_submitted_code.py", line 11
    print 'Running: ' + student_MIT_email
                    ^
SyntaxError: Missing parentheses in call to 'print'
